/***********************************************************************
X3 ChangeLog

1009-10-07  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor dict_t construction logic.

2009-10-07  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for emb_get_channel.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor modeList conversion into separate function.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor out common error cleanup logic.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_accounts function and refactor some
	common logic into a single routine.

	* src/nickserv.h src/nickserv.c: make nickserv_handle_dict externally
	available.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_kill function.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for pyobj_from_usernode.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for emb_get_servers.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for emb_get_channels.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for emb_get_users.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_server function and require P10.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_servers function.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: fix a bunch of typos

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_channels function.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_users function.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: raise exception on failure in emb_get_account.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>
